# ANPV

./: .gitignore  .gitmodules  0001-Compile-KDE-Framework-against-Qt6.patch  0002-Update-kf5-to-5.94.0.patch  0002-Update-kf5-to-5.95.0.patch  0003-Compile-kf5configwidgets-without-kf5auth-on-Windows.patch  0004-Fix-KF5-dependencies.patch  ANPV.cpp  ANPV.hpp  ANPV.qrc  AfPointOverlay.cpp  AfPointOverlay.hpp  CMakeLists.txt  CancellableProgressWidget.cpp  CancellableProgressWidget.hpp  CancellableProgressWidget.ui  Categorization.xmi  DecoderFactory.cpp  DecoderFactory.hpp  DecodingState.hpp  Dockerfile  DocumentController.cpp  DocumentController.hpp  DocumentView.cpp  DocumentView.hpp  ExifOverlay.cpp  ExifOverlay.hpp  ExifWrapper.cpp  ExifWrapper.hpp  FileOperationConfig.cpp  FileOperationConfig.hpp  FileOperationConfig.ui  Image.cpp  Image.hpp  ImageDecodeTask.cpp  ImageDecodeTask.hpp  MessageWidget.hpp  MoonPhase.cpp  MoveFileCommand.cpp  MoveFileCommand.hpp  (+23 more)
cmake/: FindJXL.cmake  FindMango.cmake
contrib/: ANPV.desktop
docker/: Dockerfile  Dockerfile-build.suse  Dockerfile-devel.suse  Dockerfile.suse  Dockerfile.ubuntu  Dockerfile.win  kdesrc-buildrc
docker/certs/: ZScaler-Intermediate.cer
icons/oxygen/: oxygen.qrc
images/: ANPV.rc  FileNotFound.odg  resource.h
src/decoders/: CziDecoder.cpp  CziDecoder.hpp  DecoderFactory.cpp  DecoderFactory.hpp  DecodingState.hpp  LibRawHelper.cpp  LibRawHelper.hpp  MangoDecoder.cpp  MangoDecoder.hpp  SmartImageDecoder.cpp  SmartImageDecoder.hpp  SmartJpegDecoder.cpp  SmartJpegDecoder.hpp  SmartJxlDecoder.cpp  SmartJxlDecoder.hpp  SmartPngDecoder.cpp  SmartPngDecoder.hpp  SmartTiffDecoder.cpp  SmartTiffDecoder.hpp  rawfiles.h
src/logic/: ANPV.cpp  ANPV.hpp  DeleteFileCommand.cpp  DeleteFileCommand.hpp  DirectoryWorker.cpp  DirectoryWorker.hpp  ExifWrapper.cpp  ExifWrapper.hpp  FileDiscoveryThread.cpp  FileDiscoveryThread.hpp  Formatter.hpp  HardLinkFileCommand.cpp  HardLinkFileCommand.hpp  Image.cpp  Image.hpp  MoonPhase.cpp  MoonPhase.hpp  MoveFileCommand.cpp  MoveFileCommand.hpp  RoundshotTagInterpreter.cpp  RoundshotTagInterpreter.hpp  TraceTimer.cpp  TraceTimer.hpp  UserCancellation.hpp  WaitCursor.hpp  types.hpp  xThreadGuard.hpp
src/models/: AbstractListItem.cpp  AbstractListItem.hpp  ImageSectionDataContainer.cpp  ImageSectionDataContainer.hpp  SectionItem.cpp  SectionItem.hpp  SortedImageModel.cpp  SortedImageModel.hpp
src/styles/: CenteredBoxProxyStyle.cpp  CenteredBoxProxyStyle.hpp  ListItemDelegate.cpp  ListItemDelegate.hpp
src/widgets/: AfPointOverlay.cpp  AfPointOverlay.hpp  CancellableProgressDialog.hpp  CancellableProgressWidget.cpp  CancellableProgressWidget.hpp  CancellableProgressWidget.ui  DocumentView.cpp  DocumentView.hpp  ExifOverlay.cpp  ExifOverlay.hpp  FileOperationConfigDialog.cpp  FileOperationConfigDialog.hpp  FileOperationConfigDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MessageWidget.cpp  MessageWidget.hpp  MultiDocumentView.cpp  MultiDocumentView.hpp  PreviewAllImagesDialog.cpp  PreviewAllImagesDialog.hpp  PreviewAllImagesDialog.ui  ProgressIndicatorHelper.cpp  ProgressIndicatorHelper.hpp  ThumbnailListView.cpp  ThumbnailListView.hpp  TomsSplash.hpp  UrlNavigatorWidget.cpp  UrlNavigatorWidget.hpp
test/: CMakeLists.txt  DecoderTest.cpp  DecoderTest.hpp  ImageTest.cpp  ImageTest.hpp  MoonPhaseTest.cpp  MoonPhaseTest.hpp  ProgressWidgetTest.cpp  ProgressWidgetTest.hpp
